--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -10,7 +10,6 @@
    <modelVersion>4.0.0</modelVersion>
    <artifactId>alfresco-rm-share-test</artifactId>
    <name>Alfresco RM Share</name>
-   <packaging>amp</packaging>
    <properties>
       <dependency.spring.version>3.1.1.RELEASE</dependency.spring.version>
       <dependency.share.po.version>2.1-SNAPSHOT</dependency.share.po.version>
@@ -26,6 +25,17 @@
          </resource>
       </resources>
       <plugins>
+         <plugin>
+            <groupId>org.alfresco.maven.plugin</groupId>
+            <artifactId>alfresco-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>amp</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
          <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
             <executions>
