RM-1107 (Mavenization of the RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59263 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/pom.xml
+++ b/pom.xml
@@ -149,8 +149,9 @@
             <extensions>true</extensions>
             <configuration>
                <backup>true</backup>
-               <ampLocation>${project.build.directory}/${project.build.finalName}.amp</ampLocation>
+               <ampLocation>${project.build.directory}/${project.build.finalName}-amp.amp</ampLocation>
                <warLocation>${project.build.directory}/${webapp.id}.war</warLocation>
+               <classifier>amp</classifier>
             </configuration>
          </plugin>
          <plugin>
