--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -8,6 +8,7 @@
       <version>2.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
+   <!-- FIXME: Remove the "-test" suffix form the artifact id -->
    <artifactId>alfresco-rm-share-test</artifactId>
    <name>Alfresco RM Share</name>
    <properties>
@@ -72,6 +73,7 @@
                <execution>
                   <id>minimize-slingshot-javascript</id>
                   <goals>
+                     <goal>jslint</goal>
                      <goal>compress</goal>
                   </goals>
                   <phase>prepare-package</phase>
