--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -22,7 +22,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
                <suiteXmlFiles>
-                  <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                  <suiteXmlFile>${project.build.testOutputDirectory}/testng.xml</suiteXmlFile>
                </suiteXmlFiles>
             </configuration>
          </plugin>
