RM-1107 (Mavenization of the RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59308 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -19,14 +19,6 @@
    <build>
       <plugins>
          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-               <suiteXmlFiles>
-                  <suiteXmlFile>${project.build.testOutputDirectory}/testng.xml</suiteXmlFile>
-               </suiteXmlFiles>
-            </configuration>
-         </plugin>
-         <plugin>
             <groupId>org.alfresco.maven.plugin</groupId>
             <artifactId>alfresco-maven-plugin</artifactId>
             <executions>
@@ -175,6 +167,24 @@
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
          <version>1.4.01</version>
+      </dependency>
+      <dependency>
+         <groupId>org.uncommons</groupId>
+         <artifactId>reportng</artifactId>
+         <version>1.1.4</version>
+         <scope>test</scope>
+         <exclusions>
+            <exclusion>
+               <groupId>org.testng</groupId>
+               <artifactId>testng</artifactId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>com.google.inject</groupId>
+         <artifactId>guice</artifactId>
+         <version>3.0</version>
+         <scope>test</scope>
       </dependency>
    </dependencies>
 </project>
