RM-1107 (Mavenization of the RM build)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/UIAUTOMATION@59324 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.properties
+++ b/build.properties
@@ -13,6 +13,7 @@ catalina.exec=${app.tomcat.folder}/bin/catalina.sh
 
 # Maven build directory properties
 mvn.build.directory=target
+mvn.resources.directory=src/main/resources
 
 # Tomcat properties
 app.tomcat.folder=${mvn.build.directory}/../../../software/${app.tomcat}
