--- a/rm-share/build.xml
+++ b/rm-share/build.xml
@@ -6,4 +6,6 @@
    <property file="../build.properties" />
    <property file="build.local.properties" />
    <property file="build.properties" />
+
+   <target name="prepareEnv" depends="updateClassPath" description="" />
 </project>
