--- a/build.xml
+++ b/build.xml
@@ -9,24 +9,24 @@
    <property environment="env" />
 
    <target name="cleanTarget">
-      <delete dir="${mvn.build.directory}" />
+      <delete dir="${mvn.build.directory}" failonerror="true" />
    </target>
 
    <target name="install" depends="cleanTarget, updateClassPath">
-      <exec executable="${mvn.exec}">
+      <exec executable="${mvn.exec}" failonerror="true">
          <arg value="install" />
          <arg value="-DskipTests" />
       </exec>
    </target>
 
    <target name="updateClassPath">
-      <exec executable="${mvn.exec}">
+      <exec executable="${mvn.exec}" failonerror="true">
          <arg value="eclipse:eclipse" />
       </exec>
    </target>
 
    <target name="fetchWarFile">
-      <exec executable="${mvn.exec}">
+      <exec executable="${mvn.exec}" failonerror="true">
          <arg value="dependency:get" />
          <arg value="-DgroupId=${app.war.groupId}" />
          <arg value="-DartifactId=${app.war.artifactId}" />
@@ -37,40 +37,40 @@
    </target>
 
    <target name="deleteWarFile">
-      <delete file="${app.package.path}" />
+      <delete file="${app.package.path}" failonerror="true" />
    </target>
 
    <target name="deleteExplodedWar">
-      <delete dir="${app.folder}"/>
+      <delete dir="${app.folder}" failonerror="true" />
    </target>
 
    <target name="alfresco:amp" depends="install">
-      <exec executable="${mvn.exec}">
+      <exec executable="${mvn.exec}" failonerror="true">
          <arg value="alfresco:amp" />
       </exec>
    </target>
 
    <target name="alfresco:install" depends="deleteWarFile, deleteExplodedWar, alfresco:amp, fetchWarFile">
-      <exec executable="${mvn.exec}">
+      <exec executable="${mvn.exec}" failonerror="true">
          <arg value="alfresco:install" />
       </exec>
    </target>
 
    <target name="copyWarFileToTomcat">
-      <copy file="${mvn.build.directory}/${app.package}" todir="${app.tomcat.webapps}"/>
+      <copy file="${mvn.build.directory}/${app.package}" todir="${app.tomcat.webapps}" failonerror="true" />
    </target>
 
    <target name="buildAndDeploy" depends="alfresco:install, copyWarFileToTomcat" description=""/>
 
    <target name="tomcat-start" description="">
-      <exec executable="${bash.exec}">
+      <exec executable="${bash.exec}" failonerror="true">
          <arg value="${catalina.exec}"/>
          <arg value="run"/>
       </exec>
    </target>
 
    <target name="tomcat-start-debug" description="">
-      <exec executable="${bash.exec}">
+      <exec executable="${bash.exec}" failonerror="true">
          <arg value="${catalina.exec}"/>
          <arg value="jpda"/>
          <arg value="run"/>
@@ -78,14 +78,14 @@
    </target>
 
    <target name="tomcat-stop" description="">
-      <exec executable="${bash.exec}">
+      <exec executable="${bash.exec}" failonerror="true">
          <arg value="${catalina.exec}"/>
          <arg value="stop"/>
       </exec>
    </target>
 
    <target name="assembleLocalisationPackage" description="">
-      <copy todir="${mvn.build.directory}/i18n/${ant.project.name}/${mvn.resources.directory}">
+      <copy todir="${mvn.build.directory}/i18n/${ant.project.name}/${mvn.resources.directory}" failonerror="true">
          <fileset dir="${mvn.resources.directory}">
             <include name="**/*.properties" />
             <exclude name="**/*_*.properties" />
@@ -99,7 +99,7 @@
    </target>
 
    <target name="assembleIconPackage" description="">
-      <copy todir="${mvn.build.directory}/icons/${ant.project.name}/${mvn.resources.directory}">
+      <copy todir="${mvn.build.directory}/icons/${ant.project.name}/${mvn.resources.directory}" failonerror="true">
          <fileset dir="${mvn.resources.directory}">
             <include name="**/*.png"/>
          </fileset>
