RM-1114: 'Loading the Document Library' message is displayed on a New Rule page in RM Site - Added appropriate message.loading properties to all languages for rule-details.get and rule-edit.get where this message is used
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.1@59343 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get.properties
@@ -11,3 +11,4 @@ message.getRuleFailure=Couldn't load rule information
 message.deletingRule=Deleting rule...   
 message.confirm.delete.title=Delete rule
 message.confirm.delete=Are you sure you want to delete the rule?
+message.loading=Loading the File Plan...
