--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get.properties
@@ -21,3 +21,4 @@ message.creating=Creating rule...
 message.updating=Updating rule...
 message.persist-failure=Couldn't persist rule
 message.createAnotherRule=Successfully created rule 
+message.loading=Loading the File Plan...
