Minor changes (changed ant targets, deleted unnecessary files) after changing the folder structure back to the original.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@59562 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.properties
+++ b/build.properties
@@ -11,12 +11,13 @@ mvn.exec=${env.MAVEN_HOME}/bin/mvn.bat
 bash.exec=${env.CYGWIN_HOME}/bin/bash
 catalina.exec=${app.tomcat.folder}/bin/catalina.sh
 
-# Maven build directory properties
-mvn.build.directory=target
-mvn.resources.directory=src/main/resources
+# Ant directory properties
+ant.build.directory=target
+ant.config.directory=config
+ant.source.web.directory=source/web
 
 # Tomcat properties
-app.tomcat.folder=${mvn.build.directory}/../../../software/${app.tomcat}
+app.tomcat.folder=${ant.build.directory}/../../../software/${app.tomcat}
 app.tomcat.webapps=${app.tomcat.folder}/webapps
 
 # Application properties
