RM-1107 (Mavenization of the RM build)  * Removed "updateClassPath" ant target  * Minor changes/tweaks in the pom.xml files
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@59575 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.xml
+++ b/build.xml
@@ -12,16 +12,10 @@
       <delete dir="${ant.build.directory}" failonerror="true" />
    </target>
 
-   <target name="install" depends="cleanTarget, updateClassPath">
+   <target name="install" depends="cleanTarget">
       <exec executable="${mvn.exec}" failonerror="true">
          <arg value="install" />
          <arg value="-DskipTests" />
-      </exec>
-   </target>
-
-   <target name="updateClassPath">
-      <exec executable="${mvn.exec}" failonerror="true">
-         <arg value="eclipse:eclipse" />
       </exec>
    </target>
 
