RM-1107 (Mavenization of the RM build)  * Minor changes (update README.txt, pom.xml and build.xml)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@59637 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.xml
+++ b/build.xml
@@ -80,7 +80,7 @@
 
    <target name="assembleLocalisationPackage" description="">
       <delete dir="${ant.build.directory}/i18n" failonerror="true" />
-	  <copy todir="${ant.build.directory}/i18n/${ant.project.name}/${ant.config.directory}" failonerror="true">
+      <copy todir="${ant.build.directory}/i18n/${ant.project.name}/${ant.config.directory}" failonerror="true">
          <fileset dir="${ant.config.directory}">
             <include name="**/*.properties" />
             <exclude name="**/*_*.properties" />
@@ -95,19 +95,21 @@
 
    <target name="assembleIconPackage" description="">
       <delete dir="${ant.build.directory}/icons" failonerror="true" />
-	  <copy todir="${ant.build.directory}/icons/${ant.project.name}" failonerror="true">
-		 <fileset dir=".">
+      <copy todir="${ant.build.directory}/icons/${ant.project.name}" failonerror="true">
+         <fileset dir=".">
             <include name="**/*.png"/>
-			<exclude name="**/${ant.build.directory}/**"/>
+            <exclude name="**/${ant.build.directory}/**"/>
          </fileset>
       </copy>
    </target>
 
    <target name="deployExploded" description="">
       <fail message="Exploded webapp directory '${app.war.artifactId}' does not exist.">
-         <condition><not>
-            <available file="${app.folder}" type="dir"/>
-         </not></condition>
+         <condition>
+            <not>
+               <available file="${app.folder}" type="dir"/>
+            </not>
+         </condition>
       </fail>
       <copy todir="${app.folder}/WEB-INF/lib" failonerror="true">
          <fileset dir="${ant.build.directory}">
