Changed the "deployExploded" ant target
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@60556 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.xml
+++ b/build.xml
@@ -82,8 +82,7 @@
       </copy>
    </target>
 
-   <!-- FIXME: Jar file should be generated -->
-   <target name="deployExploded" description="">
+   <target name="deployExploded" depends="cleanTarget, install" description="">
       <fail message="Exploded webapp directory '${app.war.artifactId}' does not exist.">
          <condition>
             <not>
